--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: "Konstantinos Christopoulos"
+logo: My-photo.jpg
 description: "Robotics, ML  and Full-Stack Projects"
 theme: jekyll-theme-cayman  # change to other supported themes if you prefer
 markdown: kramdown
