--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Konstantinos Christopoulos"
-theme: jekyll-theme-slate  # change to other supported themes if you prefer
+theme: jekyll-theme-primer  # change to other supported themes if you prefer
 markdown: kramdown
 plugins:
   - jekyll-seo-tag
